      \item **44
      \item **45
      \item **46
      \item **47
      \item **48
      \item The \code{cbind} and \code{rbind} functions have been greatly
            speeded up for large objects.
      \item The \code{c} and \code{unlist} functions have been speeded up 
            by a bit in simple cases, and by a lot in some situations 
            involving names.
      \item **51
      \item **52
      \item **53
      \item **54
      \item **55
      \item **56
      \item **57
      \item **58
      \item **59
      \item **60
      \item **61
      \item **62
      \item **63
      \item **64
      \item **65
      \item **66
      \item **67
      \item **68
      \item **69
      \item **70
      \item **71
      \item **72
      \item **73
      \item **74
      \item **75
      \item **76
      \item **77
      \item **78
      \item **79
      \item **80
      \item **81
      \item **82
      \item **83
      \item **84
      \item **85
      \item **86
      \item **87
      \item **88
      \item **89
      \item **90
      \item **91
      \item **92
      \item **93
      \item **94
      \item **95
      \item **96
      \item **97
      \item **98
      \item **99
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item The "debug" facility has been fixed.  Its behaviour for if,
            while, repeat, and for statements when the inner statement
            was or was not one with curly brackets had made no sense,
            and it had also displayed inappropriate expressions, and
            displayed things at the wrong time.  The new behaviour is
            now documented in help(debug).
      \item **2
      \item Fixed a small error-reporting bug with "$",
            illustrated by the following output:
\preformatted{
    > options(warnPartialMatchDollar=TRUE)
    > pl <- pairlist(abc=1,def=2)
    > pl$ab
    [1] 1
    Warning message:
    In pl$ab : partial match of 'ab' to ''
}
      \item **4