@@ -1,0 +1,1 @@
+Speeds up the "matrix" function, as described in NEWS.
